SVG fix (gaps, desktop section gaps reduced)
I mainly changed desktop devices view (content is more condensed now)

--- a/src/App.scss
+++ b/src/App.scss
@@ -34,6 +34,16 @@ a {
   }
 }
 
+svg {
+  margin-top: -2px;
+  margin-bottom: -2px;
+}
+
+.svg-wave {
+  width: 100%;
+  height: 110px;
+}
+
 // UNIVERSAL
 
 .gradient-underscore {
