--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -22,7 +22,7 @@
     top: 50%;
     transform: translateY(-50%);
     left: 0;
-    width: 1.8rem;
+    width: 1.7rem;
     height: 50vh;
     border-radius: 0 2rem 2rem 0;
     transition: all 0.15s ease-in-out;
